syntax = "proto3";

package Http;

message Header {
    string key = 1;
    string value = 2;
}

message Param {
    string key = 1;
    string value = 2;
}

message WriteHead {
    string id = 1;
    int32 statusCode = 2;
    string statusMessage = 3;
    repeated Header headers = 4;
    message Result {}
}

message Write {
    string id = 1;
    bytes data = 2;
    string encoding = 3;
    message Result {}
}

message Request {
    int32 statusCode = 1;
    string statusMessage = 2;
    string method = 3;
    string url = 4;
    string path = 5;

    // Query changes regarding to user input so we don't have any structure here we will store it as json string;
    string query = 6;

    // Support array of headers
    repeated Header headers = 7;
    repeated Param params = 8;

    bytes body = 9;

    // cookies?

    message Pop {
        string id = 1;
    }
}


message End {
    string id = 1;
    bytes data = 2;
    string encoding = 3;
    message Result {}
}

service Queue {
    rpc pop(Request.Pop) returns (Request);
    rpc writeHead(WriteHead) returns (WriteHead.Result);
    rpc write(Write) returns (Write.Result);
    rpc end(End) returns (End.Result);
}

 